fix nav-menu margin on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -23,6 +23,15 @@ body {
     margin-left:100px;
 }
 
+@media (max-width: 992px) {
+    
+    .navbar-nav {
+        margin-left: 0;
+
+    }
+    
+}
+
 
 
 .nav-item {
@@ -55,7 +64,7 @@ body {
 .hero-image {
     background-image:
     linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 65%,rgba(255,255,255,0.2) 74%,rgba(255,255,255,0.5) 94%,rgba(255,255,255,1) 100%),
-    url('../../assets/background.jpg');
+    url('../../assets/background.jpg'); 
     
     height:50%;
     width:100%;
